# AnchorGrid-hub

./: .gitignore  CONTRIBUTING.md  INSTALL_GRIDBASH.md  LICENSE  PUBLISHING.md  README.md  build.bat  config.grid  demo_discovery.py  pyproject.toml  requirements-shell.txt  server.py  setup.py  test_components.py
anchorgrid/: __init__.py  cli.py  cli_discovery.py
anchorgrid-frontend/app/: page.tsx
anchorgrid/agents/: __init__.py  context_manager.py  market_analyst.py  orchestrator.py  research_agent.py  risk_manager.py
anchorgrid/api/: deps.py
anchorgrid/api/v1/: __init__.py  ai.py  auth.py  feeds.py  market.py  vector.py
anchorgrid/api/v2/: __init__.py
anchorgrid/core/: README.md  __init__.py  config.py  dependencies.py  discovery.py  downloader.py  engine.py  events.py  exceptions.py  firewall.py  llm_router.py  logging.py  manifest.py  prometheus.py  registry.py  security.py  sentry.py  versioning.py  zon_engine.py
anchorgrid/db/: __init__.py  session.py
anchorgrid/db/migrations/: env.py
anchorgrid/db/migrations_timescale/: env.py
anchorgrid/db/models/: __init__.py  api_key.py  interest.py  ohlcv.py  portfolio.py  security.py  tenant.py  user.py
anchorgrid/hub/: __init__.py  auth.py  evaluation.py  merging.py  publisher.py  registry.py  server.py  submit.py  weekly_merge.py
anchorgrid/ml/: __init__.py  financial_llm.py  trainer.py
anchorgrid/models/: ohlcv.py  user.py
anchorgrid/plugins/: __init__.py
anchorgrid/plugins/finance/: __init__.py  agent.py  manifest.json
anchorgrid/routes/: __init__.py  auth.py  health.py  historical.py  indicators.py  market_movers.py  news.py  paper_trading.py  quotes.py  search.py  shadow_watch.py  websocket.py
anchorgrid/services/: __init__.py  analytics_service.py  auth_service.py  data_provider.py  embedding_service.py  historical_data_service.py  indicators_service.py  library.py  market_data_service.py  market_movers_service.py  market_state_manager.py  news_service.py  order_service.py  portfolio_service.py  quant_service.py  quote_service.py  r2_service.py  rag_service.py  redis_service.py  shadow_watch.py  trade_service.py  user_service.py  websocket_service.py
anchorgrid/tools/: api_discovery.py  data_quality.py
docs/: AGENTS_GUIDE.md  API_ROUTES_GUIDE.md  API_VERSIONING.md  CORE_GUIDE.md  DB_ML_GUIDE.md  GRIDBASH_BUILD.md  INDICATORS_GUIDE.md  INSTALL_GRIDBASH.md  ML_CONTRIBUTION.md  SCRAPERS_GUIDE.md  SERVICES_TOOLS_GUIDE.md  ZON_FORMAT.md
examples/: demo_gridbash.py  install_deps.bat
installers/windows/: setup.iss
quantgrid/: __init__.py  cli.py
quantgrid/agents/: __init__.py  market_analyst.py  orchestrator.py  research_agent.py  risk_manager.py
quantgrid/api/: deps.py
quantgrid/api/v1/: __init__.py  (+6 more)
quantgrid/core/: __init__.py  config.py  dependencies.py  downloader.py  events.py  exceptions.py  firewall.py  logging.py  manifest.py  prometheus.py  security.py  sentry.py  versioning.py
quantgrid/db/: __init__.py  session.py
quantgrid/hub/: __init__.py  auth.py  evaluation.py  merging.py  publisher.py  registry.py  server.py  submit.py  weekly_merge.py
quantgrid/indicators/: __init__.py  regime.py
quantgrid/ml/: __init__.py  financial_llm.py  trainer.py
quantgrid/models/: ohlcv.py  user.py
quantgrid/routes/: __init__.py  auth.py  health.py  historical.py  indicators.py  market_movers.py  news.py  paper_trading.py  quotes.py  search.py  shadow_watch.py  websocket.py
quantgrid/scrapers/: __init__.py  aggregator.py  central_banks.py  fred_scraper.py  sec_scraper.py  yahoo_scraper.py
quantgrid/services/: __init__.py  agent_service.py  analytics_service.py  auth_service.py  embedding_service.py  historical_data_service.py  indicators_service.py  library.py  market_data_service.py  market_movers_service.py  market_state_manager.py  news_service.py  order_service.py  portfolio_service.py  quant_service.py  quote_service.py  r2_service.py  rag_service.py  redis_service.py  shadow_watch.py  trade_service.py  user_service.py  websocket_service.py
quantgrid/tools/: rate_limited_scraper.py  training_pipeline.py
quantgrid/utils/: git.py
scripts/: build.sh
(+33 files in other folders)
