[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anchorgrid"
version = "1.0.0"
description = "Collective Intelligence for Financial Markets"
authors = [{name = "AnchorGrid Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "redis>=5.0.1",
    "httpx>=0.25.2",
    "requests>=2.31.0",
    "aiohttp>=3.9.1",
    "feedparser>=6.0.10",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "yfinance>=0.2.33",
    "pandas>=2.1.4",
    "numpy>=1.26.2",
    "weaviate-client>=3.25.3",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "loguru>=0.7.2",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "anchor-audit"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.8"
]

[project.scripts]
anchorgrid = "anchorgrid.cli:app"

[project.urls]
Homepage = "https://github.com/AnchorGrid/anchorgrid-core"